src/components/flow/routers/case/CaseElement.module.scss
@import 'variables.module.scss';

$spacing: 10px;

.group {
  padding-bottom: 0 !important;
  margin-bottom: 0px;
}

textarea:focus,
input:focus {
  outline: none;
}

.divider {
  padding-left: $spacing;
  padding-right: $spacing;
  vertical-align: sub;
  font-size: 13px;
  line-height: 13px;
  padding-top: 7px;
}

.kase.has_intent,
.kase.has_top_intent {
  .choice {
    width: 150px;
  }

  .multi_operand {
    width: 202px;
  }
}

.kase {
  display: inline-flex;
  user-select: none;
  margin-bottom: 5px;
  .form_group {
    margin: 0;
  }
  .choice {
    width: 185px;
  }
  .single_operand {
    display: inline-flex;
    position: relative;
    margin-left: $spacing;

    width: 170px;
    input {
      width: 170px;
    }
  }

  .multi_operand {
    display: inline-flex;
    margin-left: $spacing;
    width: 170px;

    input[name='intent'] {
      width: 105px;
    }

    input[name='confidence'] {
      // width: 40px;
      padding: 10px 6px !important;
    }
  }
  .categorize_as {
    font-size: 13px;
    line-height: 13px;
    position: relative;
    top: 7px;
    width: 95px;
    text-align: center;
    margin: 0px $spacing - 2;
  }
  .category {
    position: relative;
  }
  &:hover {
    .remove_icon {
      opacity: 1;
    }

    .dnd_icon {
      opacity: 1;
    }
  }
  input {
    padding: 6px 7px;
    height: 28px !important;
    font-size: 13px !important;
    border: 1px solid #ccc;
  }

  .relative_date {
    display: inline-block;
    width: 50px;
    input {
      width: 50px;
    }
  }
}

.dnd_icon {
  color: #aaa;
  font-weight: bold;
  padding-top: 9px;
  padding-right: 2px;
  padding-left: 5px;
  float: left;
  opacity: 0;
  font-size: 9px;
  line-height: 9px;
}

.remove_icon {
  color: #aaa;
  padding-top: 8px;
  float: right;
  opacity: 0;
  line-height: 12px;
  cursor: pointer;
  margin-left: 2px;
  font-size: 9px;
  z-index: 3000;
}

.empty {
  display: inline-block;
  width: 15px;
}

[data-draggable='true'] {
  cursor: pointer;
}

